--- a/EMS/src/EMS.DbMigrator/appsettings.json
+++ b/EMS/src/EMS.DbMigrator/appsettings.json
@@ -1,12 +1,12 @@
 {
   "ConnectionStrings": {
-    "Default": "Server=Passant;Database=EMS;Trusted_Connection=True;TrustServerCertificate=True"
+    "Default": "Data Source=SQL1003.site4now.net;Initial Catalog=db_ab71aa_emsprodserver;User Id=db_ab71aa_emsprodserver_admin;Password=P@ssw0rd"
   },
   "OpenIddict": {
     "Applications": {
       "EMS_Swagger": {
         "ClientId": "EMS_Swagger",
-        "RootUrl": "https://localhost:44367"
+        "RootUrl": "http://passantmohamed-001-site1.mtempurl.com"
       }
     }
   }
