--- a/EMS/src/EMS.Blazor/appsettings.json
+++ b/EMS/src/EMS.Blazor/appsettings.json
@@ -1,13 +1,13 @@
 {
   "App": {
-    "SelfUrl": "https://localhost:44394",
-    "RedirectAllowedUrls": "https://localhost:44394"
+    "SelfUrl": "http://passantmohamed-001-site1.mtempurl.com",
+    "RedirectAllowedUrls": "http://passantmohamed-001-site1.mtempurl.com"
   },
   "ConnectionStrings": {
-    "Default": "Server=Passant;Database=EMS;Trusted_Connection=True;TrustServerCertificate=True"
+    "Default": "Data Source=SQL1003.site4now.net;Initial Catalog=db_ab71aa_emsprodserver;User Id=db_ab71aa_emsprodserver_admin;Password=P@ssw0rd"
   },
   "AuthServer": {
-    "Authority": "https://localhost:44394",
+    "Authority": "http://passantmohamed-001-site1.mtempurl.com",
     "RequireHttpsMetadata": false
   },
   "StringEncryption": {
