--- a/EMS/src/EMS.Blazor/web.config
+++ b/EMS/src/EMS.Blazor/web.config
@@ -5,7 +5,11 @@
       <handlers>
         <add name="aspNetCore" path="*" verb="*" modules="AspNetCoreModuleV2" resourceType="Unspecified" />
       </handlers>
-      <aspNetCore processPath="dotnet" arguments=".\EMS.Blazor.dll" stdoutLogEnabled="false" stdoutLogFile=".\Logs\stdout" hostingModel="inprocess" />
+      <aspNetCore processPath="dotnet" arguments=".\EMS.Blazor.dll" stdoutLogEnabled="true" stdoutLogFile=".\Logs\stdout" hostingModel="InProcess">
+        <environmentVariables>
+          <environmentVariable name="ASPNETCORE_ENVIRONMENT" value="Production" />
+        </environmentVariables>
+      </aspNetCore>
     </system.webServer>
   </location>
   <system.webServer>
