--- a/EMS/src/EMS.Blazor/appsettings.json
+++ b/EMS/src/EMS.Blazor/appsettings.json
@@ -1,7 +1,8 @@
 {
   "App": {
     "SelfUrl": "http://passantmohamed-001-site1.mtempurl.com",
-    "RedirectAllowedUrls": "http://passantmohamed-001-site1.mtempurl.com"
+    "RedirectAllowedUrls": "http://passantmohamed-001-site1.mtempurl.com",
+    "CorsOrigins": "http://localhost:4200"
   },
   "ConnectionStrings": {
     "Default": "Data Source=SQL1003.site4now.net;Initial Catalog=db_ab71aa_emsprodserver;User Id=db_ab71aa_emsprodserver_admin;Password=P@ssw0rd"
