fix cart and order issues

--- a/EMS/src/EMS.Blazor/appsettings.json
+++ b/EMS/src/EMS.Blazor/appsettings.json
@@ -1,8 +1,8 @@
 {
   "App": {
     "SelfUrl": "http://passantmohamed-001-site1.mtempurl.com",
-    "RedirectAllowedUrls": "http://passantmohamed-001-site1.mtempurl.com",
-    "CorsOrigins": "https://ems-fe-9eda0.web.app"
+    "RedirectAllowedUrls": "http://passantmohamed-001-site1.mtempurl.com,http://localhost:4200",
+    "CorsOrigins": "https://ems-fe-9eda0.web.app,http://localhost:4200"
   },
   "ConnectionStrings": {
     "Default": "Data Source=SQL1003.site4now.net;Initial Catalog=db_ab71aa_emsprodserver;User Id=db_ab71aa_emsprodserver_admin;Password=P@ssw0rd"
